chore(java8) update java compliance to java 8 (#216)